admin,buyer dashboard updated

--- a/Views/AddProduct/Create.cshtml
+++ b/Views/AddProduct/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ClzProject.Models.Product
+﻿@using ClzProject.Models
+@model ClzProject.Models.Product
 
 @{
     ViewData["Title"] = "Create Product";
