--- a/Views/AddProduct/Details.cshtml
+++ b/Views/AddProduct/Details.cshtml
@@ -26,7 +26,7 @@
                             </tr>
                             <tr>
                                 <th class="bg-light">Price</th>
-                                <td>@Model.ProductPrice.ToString("C2")</td>
+                                <td>Rs. @Model.ProductPrice.ToString("N2")</td>
                             </tr>
                             <tr>
                                 <th class="bg-light">Quantity</th>
