--- a/Views/Admins/ProductDetails.cshtml
+++ b/Views/Admins/ProductDetails.cshtml
@@ -41,7 +41,7 @@
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label class="fw-bold text-muted">@Html.DisplayNameFor(m => m.ProductPrice):</label>
-                                    <p class="h5 text-success">@Model.ProductPrice.ToString("C")</p>
+                                    <p class="h5 text-success">Rs. @Model.ProductPrice.ToString("N2")</p>
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label class="fw-bold text-muted">@Html.DisplayNameFor(m => m.ProductQuantity):</label>
