--- a/Views/Seller/EditProfile.cshtml
+++ b/Views/Seller/EditProfile.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ClzProject.ViewModels.SellerProfileViewModel
 
-<form asp-action="EditProfile" asp-controller="Buyer" method="post" enctype="multipart/form-data">
+<form asp-action="EditProfile" asp-controller="Seller" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-4 mb-4">
             <!-- Image Preview Section -->
